adding a simple restassure test for loginpage.

--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,23 @@
   <version>6.8</version>
   <scope>test</scope>
 </dependency>
+<!-- https://mvnrepository.com/artifact/io.rest-assured/rest-assured -->
+<dependency>
+    <groupId>io.rest-assured</groupId>
+    <artifactId>rest-assured</artifactId>
+    <version>3.2.0</version>
+    <scope>test</scope>
+</dependency>
+<!-- https://mvnrepository.com/artifact/org.json/json -->
+<dependency>
+    <groupId>org.json</groupId>
+    <artifactId>json</artifactId>
+    <version>20190722</version>
+</dependency>
+
+
+
+
 
 <dependency>
     <groupId>org.seleniumhq.selenium</groupId>
